# ProjetPhysiqueNumerique

./: AltitudeComparison.py  GameOfLifeGIF.py  Plan.md  Reprojection.py  agent.py  model.py  pyproject.toml  utils.py
Feu de forêt/: AnalyseFF.py  ForestFire.py
MNTprocess/: DiffMNT.py
MNTprocess/MNTs/: srtm_reprojected_epsg4269.tif
MNTs/: Vallee.tif  output_USGS30m.tif
resultats/: difference_mnt.tif
