[project]
name = "projetphysiquenumerique"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "earthengine-api>=1.5.12",
    "folium>=0.19.5",
    "geemap>=0.35.3",
    "imageio>=2.37.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "mesa>=3.1.5",
    "rasterio>=1.4.3",
    "setuptools>=80.0.0",
]
